--- a/app/src/main/res/layout/home_cell_recyclerview.xml
+++ b/app/src/main/res/layout/home_cell_recyclerview.xml
@@ -14,4 +14,9 @@
         android:id="@+id/tvHomeCell"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+     <Switch
+         android:id="@+id/swCell"
+         android:layout_gravity="right"
+         android:layout_width="wrap_content"
+         android:layout_height="match_parent" />
 </LinearLayout>
