--- a/app/src/main/res/layout/activity_grid_view.xml
+++ b/app/src/main/res/layout/activity_grid_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="20dp"
-    tools:context=".ui.gridview.activity.GridViewActivity">
+    tools:context=".ui.gridview.GridViewActivity">
 
     <RelativeLayout
         app:layout_constraintBottom_toBottomOf="parent"
