--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.recyclerview.activity.RecyclerViewActivity">
+    tools:context=".ui.recyclerview.RecyclerViewActivity">
 
     <LinearLayout
         android:layout_margin="20dp"
