--- a/app/src/main/res/layout/activity_sign_up_main.xml
+++ b/app/src/main/res/layout/activity_sign_up_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="delfi.com.vn.newsample.ui.login.activity.SignUpMainActivity">
+    tools:context="delfi.com.vn.newsample.ui.signup.SignUpMainActivity">
 
     <LinearLayout
 
